utilities and testing. Endpoints aligned to the swagger file
