# src/memex-logging/ws-memex/logging_api/main.py
@@ -2,15 +2,15 @@
 This module contains all the end-points for the logging APIs
 """
 
-from flask import Flask, request
-from flask_restful import Resource, Api, abort
+from flask import request
+from flask_restful import Resource, abort
 # for second-level logging
 import logging
 from datetime import datetime
 # for handling elasticsearch
 from elasticsearch import Elasticsearch
 
-from api.utils.utils import Utils
+from utils.utils import Utils
 
 
 class LoggingResourceBuilder(object):
@@ -18,10 +18,10 @@ class LoggingResourceBuilder(object):
     Logic class used to create enable the endpoints. This class is used in ws.py
     """
     @staticmethod
-    def routes(es: Elasticsearch, project_name: str):
+    def routes(es: Elasticsearch):
         return [
-            (LogGeneralLog, '/log', (es, project_name,)),
-            (LogGeneralLogs, '/logs', (es, project_name,))
+            (LogGeneralLog, '/log', (es,)),
+            (LogGeneralLogs, '/logs', (es,))
         ]
 
 
@@ -30,14 +30,12 @@ class LogGeneralLog(Resource):
     This class can be used to log a single log message into the elasticsearch instance
     """
 
-    def __init__(self, es, project_name):
+    def __init__(self, es: Elasticsearch):
         """
         Function to gather the parameters that are going to be used in the various methods
         :param es: the elastic search instance
-        :param project_name: the name of the project. It is used to generate the right index name
         """
         self._es = es
-        self._project_name = project_name
 
     def get(self) -> None:
         """
@@ -59,7 +57,9 @@ class LogGeneralLog(Resource):
         logging.warning("INFO@LogGeneralLog POST - starting to log a new log with id [%s] at [%s]" % (
             trace_id, str(datetime.now())))
 
-        index_name = self._project_name + "-logging-" + datetime.today().strftime('%Y-%m-%d')
+        project_name = utils._extract_project_name(data)
+
+        index_name = project_name + "-logging-" + datetime.today().strftime('%Y-%m-%d')
 
         self._es.index(index=index_name, doc_type='_doc', body=data)
 
@@ -80,14 +80,12 @@ class LogGeneralLogs(Resource):
     This class can be used to log an array of log messages.
     """
 
-    def __init__(self, es, project_name):
+    def __init__(self, es: Elasticsearch):
         """
         Function to gather the external parameters that are going to be used in the other methods
         :param es: the elasticsearch instance
-        :param project_name: the name of the project
         """
         self._es = es
-        self._project_name = project_name
 
     def get(self) -> None:
         """
@@ -114,7 +112,9 @@ class LogGeneralLogs(Resource):
             logging.warning("INFO@LogGeneralLogs POST - starting to log a new log with id [%s] at [%s]" % (
                 trace_id, str(datetime.now())))
 
-            index_name = self._project_name + "-logging-" + datetime.today().strftime('%Y-%m-%d')
+            project_name = utils._extract_project_name(element)
+
+            index_name = project_name + "-logging-" + datetime.today().strftime('%Y-%m-%d')
 
             self._es.index(index=index_name, doc_type='_doc', body=element)
 
@@ -122,11 +122,14 @@ class LogGeneralLogs(Resource):
 
             logging.warning("INFO@LogGeneralLogs POST - finishing to log a new log with id [%s] at [%s]" % (
                 trace_id, str(datetime.now())))
+
         json_response = {
             "ids_logged": ';'.join(message_ids),
             "status": "ok",
             "code": 200
         }
+
         logging.warning(
             "INFO@LogGeneralLogs POST - finishing to log an array of logs at [%s]" % (str(datetime.now())))
+
         return json_response, 200
