# src/swagger/openapi.yaml
@@ -6,16 +6,101 @@ openapi: 3.0.0
 #######################
 info:
   title: Memorable Experience
-  description: APIs of the Memorable experience project
-  version: '0.1'
+  description: logging APIs for this project
+  version: '0.0.4'
   contact:
     email: "massimiliano.luca@unitn.it"
 
+tags:
+  - name: message
+    description: APIs to log the conversation into the database
+  - name: logging
+    description: APIs to log additional information of the modules
+  - name: performances
+    description: APIs to retrieve useful information from the database. What follows can be used to analyze the performances of the bot
+
+
 paths:
-    /message/{traceId}:
+    # MESSAGES APIs
+    /message:
+      post:
+        tags:
+          - message
+        summary: Add a new single message to the database
+        description: This end-point allows to log a single message into the database
+        requestBody:
+          content:
+            application/json:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/RequestMessageModel'
+                  - $ref: '#/components/schemas/ResponseMessageModel'
+                  - $ref: '#/components/schemas/NotificationModel'
+        responses:
+          '201':
+            description: Message logged
+          '405':
+            description: Invalid format of the message
+
+    /messages:
+      post:
+        tags:
+          - message
+        summary: Add a batch of messages to the database
+        description: This end-point allows to log a set of messages into the database
+        requestBody:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessagesModel'
+        responses:
+          '201':
+            description: Messages logged
+          '405':
+            description: Invalid format of the message
+
+    # GENERAL LOGGING APIS
+    /log:
+      post:
+        tags:
+          - logging
+        summary: Add a single log to the database
+        description: This end-point allows to log a single log into the database
+        requestBody:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralLogModel'
+        responses:
+          '201':
+            description: Log logged
+          '405':
+            description: Invalid format of the log
+
+    /logs:
+      post:
+        tags:
+          - logging
+        summary: Add a batch of messages to the database
+        description: This end-point allows to log a set of messages into the database
+        requestBody:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralLogsModel'
+        responses:
+          '201':
+            description: Logs logged
+          '405':
+            description: Invalid format of the log
+
+    # PERFORMANCES APIS
+    /performance/message/{traceId}:
       get:
+        tags:
+          - performances
         summary: Retrieve a single message by specifying the trace id
-        description: This end-point can be used to retrieve all the information of a single message 
+        description: This end-point can be used to retrieve all the information of a single message
         parameters:
           - in: path
             name: traceId
@@ -29,13 +114,19 @@ paths:
             content:
               applicaiton/json:
                 schema:
-                  $ref: '#/components/requestBodies/Message'
-          '400': 
+                  oneOf:
+                    - $ref: '#/components/schemas/RequestMessageModel'
+                    - $ref: '#/components/schemas/ResponseMessageModel'
+                    - $ref: '#/components/schemas/NotificationModel'
+          '404':
             description: invalid trace id
-    /conversation/{conversationId}:
+
+    /performance/conversation/{conversationId}:
       get:
+        tags:
+          - performances
         summary: Retrieve a conversation by specifying the conversation id
-        description: This end-point can be used to retrieve all the information of a conversation 
+        description: This end-point can be used to retrieve all the information of a conversation
         parameters:
           - in: path
             name: conversationId
@@ -52,73 +143,9 @@ paths:
                 schema:
                   type: array
                   items:
-                    $ref: '#/components/requestBodies/Messages'
-          '400': 
+                    $ref: '#/components/schemas/MessagesModel'
+          '400':
             description: invalid conversation id
-    /services/{traceId}:
-      get:
-        summary: Retrieve the list of services involved in a message and, eventually, the performances 
-        description: An end-point to retrieve the services involved in a message and the relative performance measure
-        parameters:
-          - in: path
-            name: traceId
-            schema:
-              type: string
-            required: true
-            description: The trace id of the message
-        responses:
-          '200':
-            description: success
-            content:
-              applicaiton/json:
-                schema:
-                  $ref: '#/components/requestBodies/Services'
-          '400': 
-            description: invalid trace id
-    #/performances/GetLowPerformancesModules:
-    #  get:
-    #    summary: Retrieve the average performances of all the modules
-    #    description: With this end-point the average performances of the module in the last n days can be obtained 
-    #   parameters:
-    #    - in: path
-    #        name: noDays
-    #        schema:
-    #          type: integer
-    #          format: int32
-    #        required: true
-    #        description: the number of days to consider
-    #    responses:
-    #      '200':
-    #        description: success
-    #        content: 
-    #          application/json: 
-    #            schema:
-    #              $ref: '#/components/requestBodies/Services'
-     #     '400':
-    #        description: invalid number id
-    
-    /log:
-      post:
-        summary: Add a new single message to the database
-        description: This end-point allows to log a single message into the database
-        requestBody:
-          $ref: '#/components/requestBodies/Message'
-        responses:
-          '201':
-            description: Created
-          default:
-            $ref: '#/components/responses/GeneralError'
-    /logs:
-      post:
-        summary: Add a batch of messages to the database
-        description: This end-point allows to log a set of messages into the database
-        requestBody:
-          $ref: '#/components/requestBodies/Messages'
-        responses:
-          '201':
-            description: Created
-          default:
-            $ref: '#/components/responses/GeneralError'
 
 components:
 
@@ -126,34 +153,56 @@ components:
   # Common data models
   ####################
   schemas:
-    # Schema for a generic error 
-    ErrorModel:
+
+    GeneralLogModel:
       type: object
-      required:
-        - code
-        - message
       properties:
-        code: 
-          enum: [400]
+        source:
+          type: string
+          example: "wine-module"
+        datetime:
+          type: string
+          example: "2019-04-04:23.11.58"
+        traceId:
+          type: string
+          example: "23DAFG2-DNEMQ-315L-RWEO"
         message:
-          enum: ["A generic error occured"]
-          
-    ServiceModel:
-      type: array
-      items:
-        type: object
-        properties:
-          serviceName: 
-            type: string
-            example: "wine"
-          performance:
-            type: integer
-            format: int32
-            example: 0.93
-        
-    
-    # Schema for a message      
-    MessageModel:
+          type: string
+          example: "ERROR @ class Message - no such file or directory exists"
+        metadata:
+          type: object
+        project:
+          type: string
+
+    ResponseMessageModel:
+      type: object
+      properties:
+        traceId:
+          type: string
+          example: "2A6F67A4-42D2-4DE0-9F00-DE4A564A83A8"
+        sentence:
+          type: string
+          example: "ecco una banca vicino a te"
+        metadata:
+          type: object
+        project:
+          type: string
+
+    NotificationModel:
+      type: object
+      properties:
+        traceId:
+          type: string
+          example: "23DAFG2-DNEMQ-315L-RWEO"
+        sentence:
+          type: string
+          example: "Non perderti la festa di questa sera!"
+        metadata:
+          type: object
+        project:
+          type: string
+
+    RequestMessageModel:
       type: object
       properties:
         traceId:
@@ -168,7 +217,7 @@ components:
         intent:
           type: object
           properties:
-            name: 
+            name:
               type: string
               example: "bonifico"
             confidence:
@@ -176,78 +225,26 @@ components:
               example: 0.87
         entities:
           type: object
-          
+
         project:
           type: string
-          example: "MeMex"
+          example: "memex"
         language:
           type: string
           example: "IT"
-          
-   
+
+
     # Schema for an array of Message
-    MessagesModel:    
+    MessagesModel:
       type: array
       items:
-        $ref: '#/components/schemas/MessageModel'
-    
-    ServicesModel:
-      type: object
-      properties:
-        service:
-          type: array
-          items:
-            $ref: '#/components/schemas/ServiceModel'
-            
+        anyOf:
+          - $ref: '#/components/schemas/RequestMessageModel'
+          - $ref: '#/components/schemas/ResponseMessageModel'
+          - $ref: '#/components/schemas/NotificationModel'
 
-  ####################
-  # Common parameters
-  ####################
-  #parameters:
-    #offsetParam:
-      #name: offset
-      #in: query
-      #schema:
-        #type: integer
-        #minimum: 0
-      #description: The number of items to skip before returning the results
 
-  #######################
-  # Common request bodies
-  #######################
-  requestBodies:
-  
-    Message:
-      description: A message in JSON format
-      required: false
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/MessageModel'
-            
-    Messages:
-      description: A set of messages in JSON format
-      required: false
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/MessagesModel'
-    
-    Services:
-      description: A set of services and their performances in JSON format
-      required: false
-      content:
-        applicaiton/json:
-          schema:
-            $ref: '#/components/schemas/ServicesModel'
-
-  ####################
-  # Common responses
-  ####################
-  responses:
-    GeneralError:
-      description: An error occurred
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/ErrorModel'
+    GeneralLogsModel:
+      type: array
+      items:
+        $ref: '#/components/schemas/GeneralLogModel'
